--- a/src/components/views/Homepage/Homepage.module.scss
+++ b/src/components/views/Homepage/Homepage.module.scss
@@ -1,5 +1,16 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-
-// }
+.root {
+  .buttonAdd {
+    display: flex;
+    padding-bottom: $base-size;
+    a {
+      text-decoration: none;
+      margin: 0 auto;
+      padding-bottom: $base-size;
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+}
