--- a/src/components/views/Post/Post.module.scss
+++ b/src/components/views/Post/Post.module.scss
@@ -1,5 +1,55 @@
 @import '../../../styles/settings.scss';
 
-// .root {
+.root {
+  .component {
+    padding: $base-size;
+    .photoWrapper {
+      height: 50vh;
+      position: relative;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    .actions {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      padding: $base-size;
 
-// }
+      .linkWrapper {
+        display: flex;
+        a {
+          text-decoration: none;
+          margin: 0 auto;
+          &:hover {
+            text-decoration: none;
+          }
+        }
+      }
+      .fab {
+        color: #FFF;
+      }
+    }
+
+    .card {
+      color: rgb(59, 57, 57);
+      padding: $base-size;
+
+      &__header {
+        text-align: center;
+        padding: $base-size 0;
+      }
+      &__content {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        .text {
+          text-align: justify;
+          padding-bottom: $base-size;
+        }
+      }
+    }
+  }
+}
