--- a/src/components/views/Post/Post.module.scss
+++ b/src/components/views/Post/Post.module.scss
@@ -29,12 +29,12 @@
         }
       }
       .fab {
-        color: #FFF;
+        color: #fff;
       }
     }
 
     .card {
-      color: rgb(59, 57, 57);
+      color: rgb(32, 30, 30);
       padding: $base-size;
 
       &__header {
